[UX][ACCESSIBILITY] Make sure the color contrast is good

--- a/src/app.css
+++ b/src/app.css
@@ -17,9 +17,11 @@
   --color-beige: #B19435;
   --color-golden-light: #FFDD7E;
   --color-golden-dark: #795F00;
+  --color-gold: #D4AF37;
   --color-dark-gray: #272727;
   --color-saulmon: #B96363;
   --color-red: #DC143C;
+  --color-deep-crimson: #8B1538;
   --color-dutch-orange: #FF8300;
   
   --text-stroke-width-sm: 1px;
